WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312721
Vertical writing-mode content incorrectly wraps when parent has auto height
https://bugs.webkit.org/show_bug.cgi?id=312721
Summary
Vertical writing-mode content incorrectly wraps when parent has auto height
alan
Reported
2026-04-19 07:13:49 PDT
ssia
Attachments
Patch
(11.71 KB, patch)
2026-04-19 07:25 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(131.45 KB, patch)
2026-04-19 10:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(143.65 KB, patch)
2026-04-19 14:08 PDT
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(177.86 KB, patch)
2026-04-20 13:07 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-19 07:25:54 PDT
Created
attachment 479206
[details]
Patch
alan
Comment 2
2026-04-19 10:05:07 PDT
Created
attachment 479210
[details]
Patch
alan
Comment 3
2026-04-19 14:08:02 PDT
Created
attachment 479211
[details]
Patch
Radar WebKit Bug Importer
Comment 4
2026-04-19 14:15:16 PDT
<
rdar://problem/175123356
>
alan
Comment 5
2026-04-19 14:17:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63079
alan
Comment 6
2026-04-20 13:07:12 PDT
Created
attachment 479221
[details]
[fast-cq]Patch
EWS
Comment 7
2026-04-20 16:08:50 PDT
Committed
311630@main
(467edd7c0ee3): <
https://commits.webkit.org/311630@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479221
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug