Vertical writing-mode content incorrectly wraps when parent has auto height https://bugs.webkit.org/show_bug.cgi?id=312721

Reviewed by Antti Koivisto.

Consider:

  <div style="height: 20px">                                      <!-- outer -->
    <div>                                                         <!-- middle, auto height -->
      <div style="writing-mode: vertical-rl">f o o b a r</div>
    </div>
  </div>

The vertical div needs to know how much vertical space it has for
laying out its text. That comes from its containing block (the
middle div). The middle div has auto height - it sizes to content, not
to the outer div's 20px. So the vertical space should be indefinite.

Per CSS Writing Modes 4, section 7.3.1, when the available inline space
is indefinite, the fallback is the viewport height. The text should
have plenty of room and not wrap.

Instead, the 20px leaks into the vertical container as constraints
forcing the text to wrap.

* LayoutTests/TestExpectations:
* LayoutTests/fast/writing-mode/auto-sizing-orthogonal-flows-expected.txt:
* LayoutTests/fast/writing-mode/auto-sizing-orthogonal-flows.html:
* LayoutTests/fast/writing-mode/percentage-height-orthogonal-writing-modes.html:
* Source/WebCore/rendering/RenderBox.cpp:
(WebCore::RenderBox::perpendicularContainingBlockLogicalHeight const):

Canonical link: https://commits.webkit.org/311630@main